B-56921 Fixing sticky header issue on tablet

--- a/public/styles/projects/fashion-tips/baby-essentials-must-haves-checklist/template_base.scss
+++ b/public/styles/projects/fashion-tips/baby-essentials-must-haves-checklist/template_base.scss
@@ -2348,7 +2348,7 @@ th.hide-for-touch {
 }
 
 .lookbook-pagination {
-    padding-top: 10px;
+    padding-top: 110px;
     text-align: center;
     z-index: 20
 }
